# plexusDB

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  audit.toml  build_err.txt  docker-compose.yml
.github/workflows/: ci.yml
crates/plexus-api/: Cargo.toml  build.rs
crates/plexus-api/src/: lib.rs  service.rs
crates/plexus-client/: Cargo.toml
crates/plexus-client/src/: lib.rs
crates/plexus-cluster/: Cargo.toml
crates/plexus-cluster/src/: gossip.rs  hash_ring.rs  lib.rs  repair.rs
crates/plexus-core/: Cargo.toml
crates/plexus-core/src/: bloom.rs  cache.rs  compaction.rs  engine.rs  iterator.rs  lib.rs  manifest.rs  memtable.rs  wal.rs
crates/plexus-core/src/sstable/: format.rs  mod.rs  reader.rs  writer.rs
crates/plexus-io/: Cargo.toml
crates/plexus-io/src/: aligned.rs  fallback.rs  lib.rs  traits.rs  uring.rs
crates/plexus-meta/: Cargo.toml
crates/plexus-meta/src/: lib.rs  queries.rs  schema.rs
crates/plexus-security/: Cargo.toml
crates/plexus-security/src/: auth.rs  encryption.rs  lib.rs  tls.rs
crates/plexus-storage/: Cargo.toml
crates/plexus-storage/src/: config.rs  detect.rs  lib.rs  s3.rs  tier.rs
crates/plexus-web/: Cargo.toml
crates/plexus-web/src/: lib.rs  routes.rs
crates/plexus-web/static/: index.html
plexus-server/: Cargo.toml
plexus-server/src/: main.rs
proto/: plexus.proto
tests/: Cargo.toml  engine_integration.rs
