[package]
name = "plexus-api"
description = "gRPC service layer for PlexusDB"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
plexus-core = { path = "../plexus-core" }
plexus-meta = { path = "../plexus-meta" }
plexus-cluster = { path = "../plexus-cluster" }

thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
parking_lot = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
